--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
-
+    <div id="carosuel">
+        <ul>
+            <li><img src="https://static.pexels.com/photos/311269/pexels-photo-311269.jpeg" alt="mleko"></li>
+            <li><img src="https://static.pexels.com/photos/311269/pexels-photo-311269.jpeg" alt="mleko"></li>
+            <li><img src="https://static.pexels.com/photos/311269/pexels-photo-311269.jpeg" alt="mleko"></li>
+            <li><img src="https://static.pexels.com/photos/311269/pexels-photo-311269.jpeg" alt="mleko"></li>
+            <li><img src="https://static.pexels.com/photos/311269/pexels-photo-311269.jpeg" alt="mleko"></li>
+        </ul>
+    </div>
 </body>
 </html>
